# src/models/dto/UpdateBookDto.ts
@@ -1,0 +1,7 @@
+export class UpdateBookDto {
+  titulo?: string;
+  autor?: string;
+  editora?: string;
+  edicao?: string;
+  categoria?: string;
+}
