# src/models/dto/UpdateUserDto.ts
@@ -1,0 +1,11 @@
+import { userActive } from "../entity/UserEntity";
+import { UserCategoryName } from "../entity/UserCategoryEntity";
+import { CourseName } from "../entity/CourseEntity";
+
+export class UpdateUserDto {
+  nome?: string;
+  categoria?: UserCategoryName;
+  curso?: CourseName;
+  status?: userActive;
+}
+
