# src/routes/userRoutes.ts
@@ -1,12 +1,12 @@
-import { Router } from 'express';
-import { createUser, deleteUserByCpf, findUserByCpf, listUsers, updateUserByCpf } from '../controllers/UserController';
+// import { Router } from 'express';
+// import { createUser, deleteUserByCpf, findUserByCpf, listUsers, updateUserByCpf } from '../controllers/UserController';
 
-const userRoutes = Router();
+// const userRoutes = Router();
 
-userRoutes.post('/', createUser);
-userRoutes.get('/', listUsers);
-userRoutes.get('/:cpf', findUserByCpf);
-userRoutes.put('/:cpf', updateUserByCpf);
-userRoutes.delete('/:cpf', deleteUserByCpf);
+// userRoutes.post('/', createUser);
+// userRoutes.get('/', listUsers);
+// userRoutes.get('/:cpf', findUserByCpf);
+// userRoutes.put('/:cpf', updateUserByCpf);
+// userRoutes.delete('/:cpf', deleteUserByCpf);
 
-export default userRoutes;
+// export default userRoutes;
